<?xml version="1.0"?>
<package format="2">
  <name>dso_ros</name>
  <version>0.0.0</version>
  <description>The dso_ros package</description>

  <maintainer email="benjamin@todo.todo">benjamin</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>roslib</build_depend>
  <build_export_depend>roslib</build_export_depend>
  <exec_depend>roslib</exec_depend>

  <build_export_depend>sensor_msgs</build_export_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
